# libUncertainty

./: .cruft.json  .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt  dodo.py
cmake/Modules/: function-git_version.cmake
doc/writups/TechnicalDetails/: TechnicalDetails.tex
scripts/: generate_basic_error_propagator_propagate_error_templates.py
src/: CMakeLists.txt
src/libUncertainty/: correlation.hpp  propagate.hpp  statistics.hpp  tags.hpp  uncertain.hpp  utils.hpp  version.h.in
testing/: CMakeLists.txt
testing/CatchTests/: benchmarks.cpp  correlation.cpp  doc_examples.cpp  error_propagation.cpp  statistics.cpp  types.cpp  utils.cpp
tests/: CMakeLists.txt  conanfile.txt
tests/CatchTests/: Devel.cpp  benchmarks.cpp  correlation.cpp  doc_examples.cpp  error_propagation.cpp  statistics.cpp  types.cpp  utils.cpp
